refactor application structure, enhance user roles and update pos ui/ux

--- a/client/src/scss/style.scss
+++ b/client/src/scss/style.scss
@@ -4,6 +4,7 @@
 @use "@coreui/chartjs/scss/coreui-chartjs";
 @use "vendors/simplebar";
 @use "@fontsource/lato";
+@use 'aos/dist/aos.css';
 
 body {
   background-color: var(--cui-tertiary-bg);
